--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,11 @@
     "overrides": [
     ],
     "rules": {
+      "@typescript-eslint/no-unused-vars": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-non-null-assertion": "off",
+      "react/prop-types": "off",
+      "prefer-const": "off"
+
     }
 }
